--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link type=“text/css” rel=”stylesheet” href=”css.css”>
+        <link rel="stylesheet" href="./css.css">
         <title>JS 1</title>
     </head>
     <body>
@@ -13,9 +13,7 @@
         <br>
         <span id="input"></span>
 
-
-
-        <script src="js.js"></script>
+        <script src="./js.js"></script>
 
     </body>
 </html>
